--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/fc209ff6b1.js" crossorigin="anonymous"></script>
 
     <link rel="shortcut icon" href="./R.png" type="image/x-icon" />
     
